fix(pagination): prevent pagination from stretching vertically

--- a/src/client/components/app/collection/results/Pagination.scss
+++ b/src/client/components/app/collection/results/Pagination.scss
@@ -5,6 +5,7 @@
 	justify-content: flex-start;
 	flex-direction: row;
 	margin-bottom: 1em;
+	flex-grow: 0;
 
 	span, a {
 		display: inline-block;
